# Data-Ingestion-Controller-Rust-

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/data/: mongodb_connection.rs  state.rs
src/models/: database.rs  mod.rs  requests.rs  responses.rs
src/routes/: generators.rs  ingestors.rs  mod.rs  users.rs
