[package]
name = "kausa-task"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "1.2.2"
dotenv = "0.15.0"
mongodb = "1.2.1"
r2d2 = "0.8.9"
r2d2-mongodb = "0.2.2"
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["helmet", "uuid"] }
serde = { version = "1.0.126", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
